# typer-cli-starter

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  Taskfile.yaml  pyproject.toml  requirements.txt
src/: main.py
src/commands/: base.py
src/configs/: __init__.py  env.py  log.py
src/connections/: ckafka.py  elastic.py  mongo.py  pg_alchemy.py  postgre.py  rmq.py
src/connections/utils/: pg_queries.py
tests/: __init__.py  test_base.py
